objects/cc_oo_ServiceData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to store the Service Related Details.</description>
    <fields>
        <fullName>cc_oo_AuthMechanism__c</fullName>
        <label>Auth Mechanism</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_ContentType__c</fullName>
        <label>ContentType</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Host__c</fullName>
        <inlineHelpText>Please enter the domain with http/https.</inlineHelpText>
        <label>Host</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cc_oo_MethodApp__c</fullName>
        <label>Method App</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_MethodName__c</fullName>
        <label>Method Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_OrderType__c</fullName>
        <label>Order Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_P4210Version__c</fullName>
        <label>P4210Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Password__c</fullName>
        <label>Password</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Port__c</fullName>
        <label>Port</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_RequestMethod__c</fullName>
        <label>Request Method</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_SessionIdle__c</fullName>
        <label>SessionIdle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Session__c</fullName>
        <label>Session</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Timeout__c</fullName>
        <inlineHelpText>Please enter timeout in miliseconds.</inlineHelpText>
        <label>Timeout</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Type__c</fullName>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_URI__c</fullName>
        <label>URI</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cc_oo_UserName__c</fullName>
        <label>UserName</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_szFreightHandlingCode__c</fullName>
        <label>szFreightHandlingCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CC OO ServiceData</label>
</CustomObject>